<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ht_bg_rect_white_12"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dp_16"
    android:paddingVertical="@dimen/dp_20">

    <View
        android:id="@+id/v_bar"
        android:layout_width="@dimen/dp_66"
        android:layout_height="@dimen/dp_8"
        android:background="@drawable/ht_bg_dialog_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_confirm_message"
        style="@style/T1_14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        android:layout_marginHorizontal="@dimen/dp_6"
        android:layout_marginTop="@dimen/dp_22"
        tools:text="@string/ht_delete_record_remind"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginBottom="@dimen/dp_12">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="@style/MaterialButton.b3"
            android:layout_width="0dp"
            android:textSize="@dimen/sp_16"
            android:layout_height="@dimen/dp_48"
            android:layout_marginEnd="@dimen/dp_12"
            android:layout_weight="1"
            android:text="@string/ht_cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ok"
            style="@style/MaterialButton.b1"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_48"
            android:maxLines="1"
            android:textSize="@dimen/sp_16"
            app:autoSizeTextType="uniform"
            app:autoSizeMaxTextSize="@dimen/sp_16"
            app:autoSizeMinTextSize="@dimen/sp_12"
            app:autoSizeStepGranularity="1sp"
            android:layout_weight="1"
            android:text="@string/ht_confirm" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>